--- a/newstuff.html
+++ b/newstuff.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html" aria-expanded="false">
                         HOME</a></li>
-                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-info display-4" href="https://mobirise.com" aria-expanded="true" data-toggle="dropdown-submenu">DIGITAL PRODUCTS</a>
+                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-info display-4" href="https://mobirise.com" aria-expanded="true" data-toggle="dropdown-submenu">DIGITAL PRODUCTS</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item text-info display-4" href="https://gamejolt.com/games/grocerycatcher/523501" aria-expanded="false" target="_blank">Grocery Catcher</a>
                         <a class="dropdown-item text-info display-4" href="fruity.html" aria-expanded="false">Fruity</a>
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="cid-saUBo3nhai mbr-fullscreen mbr-parallax-background" id="header2-4r">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="cid-saUBo3nhai mbr-fullscreen mbr-parallax-background" id="header2-4r">
 
     
 
