--- a/fruity.html
+++ b/fruity.html
@@ -59,7 +59,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="header1 cid-saSwAvxo53" id="header16-4o">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header1 cid-saSwAvxo53" id="header16-4o">
 
     
 
