--- a/lenses.html
+++ b/lenses.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="header10 cid-saDe2pJIVy mbr-fullscreen mbr-parallax-background" id="header10-4e">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header10 cid-saDe2pJIVy mbr-fullscreen mbr-parallax-background" id="header10-4e">
 
     
 
@@ -97,7 +97,7 @@
             <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Social Lenses</h1>
             
             <p class="mbr-text pb-3 mbr-fonts-style display-5">
-               Early Access</p>
+               Coming Soon</p>
             <div class="mbr-section-btn"><a class="btn btn-md btn-info display-4" href="https://share.hsforms.com/1uqhpytbnQluDCV0-T0nEVQ3kym0" target="_blank">Request Consultation</a></div>
         </div>
     </div>
