--- a/whatsnew.html
+++ b/whatsnew.html
@@ -41,7 +41,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
 
     
 
