--- a/chartm.html
+++ b/chartm.html
@@ -17,7 +17,8 @@
         ['Estimated views (JUN, 2020)',        1181, 877, 66, 4, 0, 0,0],
         ['Estimated views (JUL, 2020)',        1305, 840, 117, 1, 4, 146,0],
         ['Estimated views (AUG, 2020)',        1133, 1098, 73, 0, 9, 223,0],
-        ['Estimated views (SEP, 2020)',        442, 1065, 61, 0, 0, 510, 25]
+        ['Estimated views (SEP, 2020)',        442, 1065, 61, 0, 0, 510, 25],
+        ['Estimated views (OCT, 2020)',        527, 191, 9, 0, 0, 105, 33]
       ]);
 
       var options = {
