--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         <a class="text-white mbr-bold" href="https://share.hsforms.com/1MLS26BSLRHSixpwiLCeiiQ3kym0" target="_blank">Get In Touch</a>
                     </li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="jobs.html">Careers</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="privacy.html">Privacy</a>&nbsp; &nbsp; &nbsp;</li></ul>
+                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="privacy.html">Privacy</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="https://borgcreative.freshdesk.com/support/home" target="_blank">Support</a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
@@ -301,7 +301,15 @@
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
-  
+  <script>
+  function initFreshChat() {
+    window.fcWidget.init({
+      token: "ecce6efc-4e78-428e-8df6-c1bdd0f3c1bd",
+      host: "https://wchat.freshchat.com"
+    });
+  }
+  function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
+</script>
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
