Updated account abilities and sign up

--- a/page12.html
+++ b/page12.html
@@ -101,7 +101,7 @@
             <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">BCS Marketing</h1>
             
             
-            <div class="mbr-section-btn"><a class="btn btn-md btn-info display-4" href="https://share.hsforms.com/1xuuWwe5sSkulncGdkz-Qyw3kym0" target="_blank">SIGN UP</a></div>
+            <div class="mbr-section-btn"><a class="btn btn-md btn-info display-4" href="https://share.hsforms.com/1xuuWwe5sSkulncGdkz-Qyw3kym0" target="_blank">SIGN UP</a> <a class="btn btn-md btn-info display-4" href="account.html" target="_blank">Accounts</a></div>
         </div>
     </div>
 
@@ -200,7 +200,7 @@
                         <a class="text-white mbr-bold" href="https://share.hsforms.com/1MLS26BSLRHSixpwiLCeiiQ3kym0" target="_blank">Get In Touch</a>
                     </li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="jobs.html">Careers</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="privacy.html">Privacy</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="https://borgcreative.freshdesk.com/support/home" target="_blank">Support</a></li></ul>
+                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="privacy.html">Privacy</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="accountterms.html">Terms</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="https://borgcreative.freshdesk.com/support/home" target="_blank">Support</a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
