--- a/page13.html
+++ b/page13.html
@@ -196,7 +196,7 @@
                     Let's host your ad today!</h2>
                 
                 
-                <div class="mbr-section-btn align-left py-4"><a class="btn btn-danger display-4" href="#">SIGN UP</a></div>
+                <div class="mbr-section-btn align-left py-4"><a class="btn btn-danger display-4" href="signup-marketing.html">SIGN UP</a></div>
             </div>
         </div>
     </div>
