--- a/signup.html
+++ b/signup.html
@@ -90,7 +90,7 @@
 <div id="custom-html-5k"><!-- Type valid HTML here -->
 
 <div>
-<center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScOmiYCV05lwakYRS5AnAW92CnQv54nkSUWZLepNczTx9feFw/viewform?embedded=true" width="640" height="1205" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
+<center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScOmiYCV05lwakYRS5AnAW92CnQv54nkSUWZLepNczTx9feFw/viewform?embedded=true" width="95%" height="1505" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
 </div></div>
 
 <section once="footers" class="cid-sdUXUUnA1b" id="footer7-5l">
