--- a/deleteaccount.html
+++ b/deleteaccount.html
@@ -90,7 +90,7 @@
 <div id="custom-html-5s"><!-- Type valid HTML here -->
 
 <div>
-    <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfeCrjNRzsWxQkkIrlgjGEZ8bzu4-5lUi1nolQLLtxN-uzWzA/viewform?embedded=true" width="640" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
+    <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfeCrjNRzsWxQkkIrlgjGEZ8bzu4-5lUi1nolQLLtxN-uzWzA/viewform?embedded=true" width="95%" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
 </div></div>
 
 <section once="footers" class="cid-sdUXUUnA1b" id="footer7-5r">
