Just a few fixes

--- a/page12.html
+++ b/page12.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="assets/images/page12-meta.png">
+  <meta property="og:image" content="assets/images/page12-meta.png">
+  <meta name="twitter:title" content="Marketing">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/bcs-logo-1.png" type="image/x-icon">
   <meta name="description" content="Borg Creative Studios Marketing">
@@ -101,7 +105,7 @@
             <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">BCS Marketing</h1>
             
             
-            <div class="mbr-section-btn"><a class="btn btn-md btn-info display-4" href="signup-marketing.html" target="_blank">SIGN UP</a> <a class="btn btn-md btn-info display-4" href="account.html" target="_blank">Accounts</a></div>
+            <div class="mbr-section-btn"><a class="btn btn-md btn-info display-4" href="signup-marketing.html">SIGN UP</a> <a class="btn btn-md btn-info display-4" href="account.html">Accounts</a></div>
         </div>
     </div>
 
