--- a/deleteaccount.html
+++ b/deleteaccount.html
@@ -90,7 +90,7 @@
 <div id="custom-html-5s"><!-- Type valid HTML here -->
 
 <div>
-    <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfeCrjNRzsWxQkkIrlgjGEZ8bzu4-5lUi1nolQLLtxN-uzWzA/viewform?embedded=true" width="95%" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
+    <center><script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrQhSxiSeaLpT4AL?backgroundColor=red" frameborder="0" onmousewheel="" width="100%" height="763" style="background: transparent; border: 1px solid #ccc;"></iframe></center>
 </div></div>
 
 <section once="footers" class="cid-sdUXUUnA1b" id="footer7-5r">
