--- a/account.html
+++ b/account.html
@@ -57,7 +57,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html" aria-expanded="false">
                         HOME</a></li>
-                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-info display-4" href="#" aria-expanded="true" data-toggle="dropdown-submenu">DIGITAL PRODUCTS</a>
+                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-info display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">DIGITAL PRODUCTS</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item text-info display-4" href="https://gamejolt.com/games/grocerycatcher/523501" aria-expanded="false" target="_blank">Grocery Catcher</a>
                         <a class="dropdown-item text-info display-4" href="fruity.html" aria-expanded="false">Fruity</a>
@@ -65,8 +65,8 @@
                     </div>
                 </li>
 
-                <li class="nav-item dropdown"><a class="nav-link link text-info dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">
-                        ENTERTAINMENT</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="animation.html" aria-expanded="false">Animation</a><a class="text-info dropdown-item display-4" href="interactive.html" aria-expanded="false">Interactive</a></div></li>
+                <li class="nav-item dropdown open"><a class="nav-link link text-info dropdown-toggle display-4" href="#" aria-expanded="true" data-toggle="dropdown-submenu">
+                        ENTERTAINMENT</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="animation.html" aria-expanded="false">Animation</a><a class="text-info dropdown-item text-primary display-4" href="vidoe.html" aria-expanded="false">Video</a><a class="text-info dropdown-item display-4" href="interactive.html" aria-expanded="false">Interactive</a></div></li>
                 <li class="nav-item"><a class="nav-link link text-info display-4" href="https://teespring.com/stores/borgcreative" aria-expanded="false" target="_blank">
                         SHOP</a></li></ul>
             
