--- a/deleteaccount.html
+++ b/deleteaccount.html
@@ -64,8 +64,8 @@
                     </div>
                 </li>
 
-                <li class="nav-item dropdown open"><a class="nav-link link text-info dropdown-toggle display-4" href="#" aria-expanded="true" data-toggle="dropdown-submenu">
-                        ENTERTAINMENT</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="animation.html" aria-expanded="false">Animation</a><a class="text-info dropdown-item text-primary display-4" href="vidoe.html" aria-expanded="false">Video</a><a class="text-info dropdown-item display-4" href="interactive.html" aria-expanded="false">Interactive</a></div></li>
+                <li class="nav-item dropdown"><a class="nav-link link text-info dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">
+                        ENTERTAINMENT</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="animation.html" aria-expanded="false">Animation</a><a class="text-info dropdown-item text-primary display-4" href="video.html" aria-expanded="false">Video</a><a class="text-info dropdown-item display-4" href="interactive.html" aria-expanded="false">Interactive</a></div></li>
                 <li class="nav-item"><a class="nav-link link text-info display-4" href="https://teespring.com/stores/borgcreative" aria-expanded="false" target="_blank">
                         SHOP</a></li></ul>
             
