--- a/bct/mk2-bar-2.html
+++ b/bct/mk2-bar-2.html
@@ -9,10 +9,10 @@
   <body>
 
 <div class="gallery">
-  <a target="_blank" href="https://kutt.it/1EnvMD">
-    <img src="musicad1.png" alt="Jacob D Borg - Music" width="30%" height="auto">
+  <a target="_blank" href="https://www.borgcreative.com/page12.html">
+    <img src="./img/marketingad2.jpg" alt="Borg Creative Studios Marketing services" width="30%" height="auto">
   </a>
-  <div hidden class="desc">Listen to Jacob D Borg's latest song!</div>
+  <div hidden class="desc">Buy an ad today!</div>
 </div>
 
 <div class="gallery">
