--- a/lenses.html
+++ b/lenses.html
@@ -126,7 +126,7 @@
                     <div class="card col-12 col-md-6 col-lg-4 pb-md-4">
                         <div class="panel-item align-center">
                             <div class="card-img pb-3">
-                                <h3 class="img-text mbr-fonts-style display-1">230.5k</h3>
+                                <h3 class="img-text mbr-fonts-style display-1">262.4k</h3>
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Total Views</h4>
@@ -137,7 +137,7 @@
                     <div class="card col-12 col-md-6 col-lg-4 pb-md-4">
                         <div class="panel-item align-center">
                             <div class="card-img pb-3">
-                                <h3 class="img-text mbr-fonts-style display-1">116.9k</h3>
+                                <h3 class="img-text mbr-fonts-style display-1">132.2k</h3>
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Total Uses/Plays</h4>
@@ -148,7 +148,7 @@
                     <div class="card col-12 col-md-6 col-lg-4 last-child">
                         <div class="panel-item align-center">
                             <div class="card-img pb-3">
-                                <h3 class="img-text mbr-fonts-style display-1">18,718</h3>
+                                <h3 class="img-text mbr-fonts-style display-1">21,223</h3>
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Total Shares</h4>
@@ -271,11 +271,9 @@
                     
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="about.html">About us</a>&nbsp;</li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="research.html">Research</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="https://share.hsforms.com/1MLS26BSLRHSixpwiLCeiiQ3kym0" target="_blank">Get In Touch</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
+                        <a class="text-white mbr-bold" href="about.html">About us</a>&nbsp;</li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="research.html">Research</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="https://borgcreative.freshdesk.com/support/home" target="_blank">Support</a>&nbsp; &nbsp;&nbsp;</li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="jobs.html">Careers</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="privacy.html">Privacy</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="accountterms.html">Terms</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="https://borgcreative.freshdesk.com/support/home" target="_blank">Support</a></li></ul>
+                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="privacy.html">Privacy</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="accountterms.html">Terms</a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
