--- a/bct/mk2-bar-4.html
+++ b/bct/mk2-bar-4.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <!--BCS Ads MK2-->
-    <title>general/media/technology</title>
+    <title>general/politics/technology</title>
     <meta charset="utf-8">
-    <script async src="https://tracking.venturify.at/pixel/kXp7pE7NyceZOe24"></script>
+    <!-- Pixel Code for https://tracking.venturify.at/ -->
+<script async src="https://tracking.venturify.at/pixel/WSdjvu7DcbRoQAQi"></script>
+<!-- END Pixel Code -->
   </head>
   <body>
 
@@ -16,10 +18,10 @@
     </div>
 
 <div class="gallery">
-  <a target="_blank" href="https://kutt.it/gTmYEg">
-    <img src="gttAD.PNG" alt="Grounds Tech Talk" width="30%" height="auto">
+  <a target="_blank" href="https://www.borgcreative.com/page12.html">
+    <img src="./img/marketingad2.jpg" alt="Borg Creative Studios Marketing services" width="30%" height="auto">
   </a>
-  <div hidden class="desc">Let's Talk Tech and Coffee.</div>
+  <div hidden class="desc">Buy an ad today!</div>
 </div>
 
 <div class="gallery">
