--- a/fruity.html
+++ b/fruity.html
@@ -213,11 +213,9 @@
                     
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="about.html">About us</a>&nbsp;</li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="research.html">Research</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="https://share.hsforms.com/1MLS26BSLRHSixpwiLCeiiQ3kym0" target="_blank">Get In Touch</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
+                        <a class="text-white mbr-bold" href="about.html">About us</a>&nbsp;</li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="research.html">Research</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="https://borgcreative.freshdesk.com/support/home" target="_blank">Support</a>&nbsp; &nbsp;&nbsp;</li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="jobs.html">Careers</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="privacy.html">Privacy</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="accountterms.html">Terms</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="https://borgcreative.freshdesk.com/support/home" target="_blank">Support</a></li></ul>
+                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="privacy.html">Privacy</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="accountterms.html">Terms</a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
