--- a/page13.html
+++ b/page13.html
@@ -137,7 +137,7 @@
                     <div class="card col-12 col-md-6 col-lg-4 pb-md-4">
                         <div class="panel-item align-center">
                             <div class="card-img pb-3">
-                                <h3 class="img-text mbr-fonts-style display-1">585</h3>
+                                <h3 class="img-text mbr-fonts-style display-1">594</h3>
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Network Views</h4>
@@ -149,7 +149,7 @@
                     <div class="card col-12 col-md-6 col-lg-4 last-child">
                         <div class="panel-item align-center">
                             <div class="card-img pb-3">
-                                <h3 class="img-text mbr-fonts-style display-1">1896</h3>
+                                <h3 class="img-text mbr-fonts-style display-1">2103</h3>
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Network Views</h4>
@@ -181,6 +181,13 @@
         </div>
     </div>
 </section>
+
+<div id="custom-html-67"><!-- Type valid HTML here -->
+
+<div>
+    <h1 class="display-1">Location Stats</h1>
+<center><iframe class="airtable-embed" src="https://airtable.com/embed/shr2U9YDg30zOnthS?backgroundColor=gray" frameborder="0" onmousewheel="" width="100%" height="633" style="background: transparent; border: 1px solid #ccc;"></iframe></center>
+</div></div>
 
 <section class="mbr-section info3 cid-saD2ksXVO0 mbr-parallax-background" id="info3-45">
 
@@ -218,11 +225,9 @@
                     
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="about.html">About us</a>&nbsp;</li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="research.html">Research</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="https://share.hsforms.com/1MLS26BSLRHSixpwiLCeiiQ3kym0" target="_blank">Get In Touch</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
+                        <a class="text-white mbr-bold" href="about.html">About us</a>&nbsp;</li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="research.html">Research</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="https://borgcreative.freshdesk.com/support/home" target="_blank">Support</a>&nbsp; &nbsp;&nbsp;</li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="jobs.html">Careers</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="privacy.html">Privacy</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="accountterms.html">Terms</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="https://borgcreative.freshdesk.com/support/home" target="_blank">Support</a></li></ul>
+                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold" href="privacy.html">Privacy</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a class="text-white mbr-bold text-primary" href="accountterms.html">Terms</a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
