New, more private analytics!

--- a/bct/mk2-bar-1.html
+++ b/bct/mk2-bar-1.html
@@ -4,7 +4,12 @@
     <!--BCS Ads MK2-->
     <title>general/politics/entertainment/non-profit</title>
     <meta charset="utf-8">
-    <script async src="https://tracking.venturify.at/pixel/38sekgT25etzrufA"></script>
+    <!-- Panelbear Analytics - We respect your privacy -->
+    <script async src="https://cdn.panelbear.com/analytics.js?site=Lb4H1jUYLUz"></script>
+    <script>
+      window.panelbear = window.panelbear || function(){ window.panelbearQ = window.panelbearQ || []; panelbearQ.push(arguments); };
+      panelbear('config', { site: 'Lb4H1jUYLUz' });
+    </script>
   </head>
   <body>
 
