--- a/bct/mk2-bar-3.html
+++ b/bct/mk2-bar-3.html
@@ -4,7 +4,12 @@
     <!--BCS Ads MK2-->
     <title>general/media/technology</title>
     <meta charset="utf-8">
-    <script async src="https://tracking.venturify.at/pixel/kXp7pE7NyceZOe24"></script>
+    <!-- Panelbear Analytics - We respect your privacy -->
+    <script async src="https://cdn.panelbear.com/analytics.js?site=NRH9pZQq2i"></script>
+    <script>
+      window.panelbear = window.panelbear || function(){ window.panelbearQ = window.panelbearQ || []; panelbearQ.push(arguments); };
+      panelbear('config', { site: 'NRH9pZQq2i' });
+    </script>
   </head>
   <body>
 
