--- a/bct/mk2-bar-4.html
+++ b/bct/mk2-bar-4.html
@@ -4,9 +4,12 @@
     <!--BCS Ads MK2-->
     <title>general/politics/technology</title>
     <meta charset="utf-8">
-    <!-- Pixel Code for https://tracking.venturify.at/ -->
-<script async src="https://tracking.venturify.at/pixel/WSdjvu7DcbRoQAQi"></script>
-<!-- END Pixel Code -->
+    <!-- Panelbear Analytics - We respect your privacy -->
+    <script async src="https://cdn.panelbear.com/analytics.js?site=8g5iENhM1Lz"></script>
+    <script>
+        window.panelbear = window.panelbear || function(){ window.panelbearQ = window.panelbearQ || []; panelbearQ.push(arguments); };
+        panelbear('config', { site: '8g5iENhM1Lz' });
+    </script>
   </head>
   <body>
 
