--- a/bct/mk2-bar-fruity.html
+++ b/bct/mk2-bar-fruity.html
@@ -4,7 +4,12 @@
     <!--BCS Ads MK2-->
     <title>general/entertainment/media</title>
     <meta charset="utf-8">
-    <script async src="https://tracking.venturify.at/pixel/9xKGHpYz5YAspWFX"></script>
+    <!-- Panelbear Analytics - We respect your privacy -->
+    <script async src="https://cdn.panelbear.com/analytics.js?site=CDdhQeiLyps"></script>
+    <script>
+      window.panelbear = window.panelbear || function(){ window.panelbearQ = window.panelbearQ || []; panelbearQ.push(arguments); };
+      panelbear('config', { site: 'CDdhQeiLyps' });
+    </script>
   </head>
   <body>
 
