--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                             Host ads with us and reach new customers! Our platform respects privacy by not using cookings and we don't sell data.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page12.html" class="btn btn-danger display-4">Marketing</a> <a href="lenses.html" class="btn btn-danger display-4">Social Lenses</a></div>
+                    <div class="mbr-section-btn text-center"><a href="page12.html" class="btn btn-danger display-4">Advertising</a> <a href="lenses.html" class="btn btn-danger display-4">Social Lenses</a></div>
                 </div>
             </div>
 
@@ -152,7 +152,7 @@
                             Entertainment</h4>
                         <p class="mbr-text mbr-fonts-style display-7">We are producing games, interactive web content, and animations for your enjoyment!&nbsp;</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="animation.html" class="btn btn-danger display-4">Animation</a> <a href="interactive.html" class="btn btn-danger display-4">Interactive</a></div>
+                    <div class="mbr-section-btn text-center"><a href="animation.html" class="btn btn-danger display-4">Animation</a> <a href="video.html" class="btn btn-danger display-4">Video</a> <a href="interactive.html" class="btn btn-danger display-4">Interactive</a></div>
                 </div>
             </div>
 
