--- a/bct/mk2-bar-fruity.html
+++ b/bct/mk2-bar-fruity.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
     <!--BCS Ads MK2-->
     <title>general/entertainment/media</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <meta charset="utf-8">
     <!-- Panelbear Analytics - We respect your privacy -->
     <script async src="https://cdn.panelbear.com/analytics.js?site=CDdhQeiLyps"></script>
@@ -13,28 +15,38 @@
   </head>
   <body>
 
-    <div class="gallery">
-      <a href="https://kutt.it/cMt0dj">
-        <img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog" width="30%" height="auto">
-      </a>
-      <div hidden class="desc">Let's chat about current issues over coffee.</div>
+    <div class="gallery" style="width: 30%;" height="auto">
+    <div class="card" style="width: 100%;" height="auto">
+        <img src="wdm.png" class="card-img-top" alt="Wave Digital Ministries Network">
+        <div class="card-body">
+          <h5 class="card-title">Wave Digital Ministries</h5>
+          <p class="card-text">We are merging ministry & technology.</p>
+          <a href="https://kutt.it/wXTmup" class="card-link">Learn more</a><a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="card-link">Report ad</a>
+        </div>
+      </div>
     </div>
 
-<div class="gallery">
-  <a href="https://kutt.it/1EnvMD">
-    <img src="musicad1.png" alt="Jacob D Borg - Music" width="30%" height="auto">
-  </a>
-  <div hidden class="desc">Listen to Jacob D Borg's latest song!</div>
+<div class="gallery" style="width: 30%;" height="auto">
+<div class="card" style="width: 100%;" height="auto">
+    <img src="https://www.borgcreative.com/bct/cwjad.jpg" class="card-img-top" alt="CoffeeWithJake Blog">
+    <div class="card-body">
+      <h5 class="card-title">CoffeeWithJake</h5>
+      <p class="card-text">Let's chat about current issues over coffee.</p>
+      <a href="https://kutt.it/cMt0dj" class="card-link">Learn more</a><a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="card-link">Report ad</a>
+    </div>
+  </div>
 </div>
 
-<div class="gallery">
-  <a href="https://kutt.it/AvTyTk">
-    <img src="grocerycatcher1.png" alt="Grocery Catcher" width="30%" height="auto">
-  </a>
-  <div hidden class="desc">Catch the food with your cart and avoid the rapidly approaching boulders!</div>
+<div class="gallery" style="width: 30%;" height="auto">
+<div class="card" style="width: 100%;" height="auto">
+    <img src="grocerycatcher1.png" class="card-img-top" alt="Grocery Catcher">
+    <div class="card-body">
+      <h5 class="card-title">Grocery Catcher</h5>
+      <p class="card-text">Catch the food with your cart and avoid the rapidly approaching boulders!</p>
+      <a href="https://kutt.it/AvTyTk" class="card-link">Learn more</a><a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="card-link">Report ad</a>
+    </div>
+  </div>
 </div>
-
-
 
 <style>
 div.gallery {
