--- a/bct/mk3-bar-1.html
+++ b/bct/mk3-bar-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" style="background-color:none;">
   <head>
 
     <!--BCS Ads MK2-->
@@ -13,7 +13,7 @@
       panelbear('config', { site: 'CDdhQeiLyps' });
     </script>
   </head>
-  <body>
+  <body style="background-color:none;">
 
     <div class="gallery" style="width: 45%;" height="auto">
       <div class="uk-card uk-card-default" width="100%">
