--- a/bct/mk2-bar-fruity.html
+++ b/bct/mk2-bar-fruity.html
@@ -17,6 +17,7 @@
 
     <div class="gallery" style="width: 30%;" height="auto">
       <div class="uk-card uk-card-default" width="100%">
+          <div class="uk-card-media-top">
               <img src="wdm.png" alt="Wave Digital Ministries Network">
           </div>
           <div class="uk-card-body">
