--- a/bct/mk3-bar-1.html
+++ b/bct/mk3-bar-1.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.9/dist/css/uikit.min.css" />
     <meta charset="utf-8">
     <!-- Panelbear Analytics - We respect your privacy -->
-    <script async src="https://cdn.panelbear.com/analytics.js?site=CDdhQeiLyps"></script>
-    <script>
+  <script async src="https://cdn.panelbear.com/analytics.js?site=Ft3va9ULJu8"></script>
+  <script>
       window.panelbear = window.panelbear || function(){ window.panelbearQ = window.panelbearQ || []; panelbearQ.push(arguments); };
-      panelbear('config', { site: 'CDdhQeiLyps' });
-    </script>
+      panelbear('config', { site: 'Ft3va9ULJu8' });
+  </script>
   </head>
   <body style="background-color:transparent;">
 
