--- a/bct/mk2-bar-2.html
+++ b/bct/mk2-bar-2.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <!--BCS Ads MK2-->
+    <!--BCS Ads MK3-->
     <title>general/entertainment/media</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.9/dist/css/uikit.min.css" />
+
     <meta charset="utf-8">
     <!-- Panelbear Analytics - We respect your privacy -->
     <script async src="https://cdn.panelbear.com/analytics.js?site=CPze3vq8kKh"></script>
@@ -11,28 +13,35 @@
       panelbear('config', { site: 'CPze3vq8kKh' });
     </script>
   </head>
-  <body>
+  <body style="background-color:transparent;">
 
-<div class="gallery">
-  <a target="_blank" href="https://www.borgcreative.com/page12.html">
-    <img src="./img/marketingad2.jpg" alt="Borg Creative Studios Marketing services" width="30%" height="auto">
-  </a>
-  <div hidden class="desc">Buy an ad today!</div>
-</div>
+    <div class="gallery" style="width: 45%;" height="auto">
+      <div class="uk-card uk-card-default" width="100%">
+          <div class="uk-card-media-top">
+              <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted"><img src="./img/marketingad2.jpg" alt="Wave Digital Ministries Network"></a>
+          </div>
+          <div class="uk-card-body">
+            <h5 class="uk-heading-line"><span>BCS Marketing</span></h5>
+            <p>Buy an ad today!</p>
+            <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
-<div class="gallery">
-  <a target="_blank" href="https://kutt.it/gTmYEg">
-    <img src="gttAD.PNG" alt="Grounds Tech Talk" width="30%" height="auto">
-  </a>
-  <div hidden class="desc">Let's Talk Tech and Coffee.</div>
-</div>
+          </div>
+      </div>
+    </div>
+    <div class="gallery" style="width: 45%;" height="auto">
+      <div class="uk-card uk-card-default" width="100%">
+          <div class="uk-card-media-top">
+              <a href="https://kutt.it/AvTyTk" target="_blank" class="uk-link-muted"><img src="grocerycatcher1.png" alt="CoffeeWithJake Blog"></a>
+          </div>
+          <div class="uk-card-body">
+            <h5 class="uk-heading-line"><span>Grocery Catcher</span></h5>
+            <p>Catch the food with your cart and avoid the rapidly approaching boulders!</p>
+            <a href="https://kutt.it/AvTyTk" target="_blank" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
-<div class="gallery">
-  <a target="_blank" href="https://kutt.it/AvTyTk">
-    <img src="grocerycatcher1.png" alt="Grocery Catcher" width="30%" height="auto">
-  </a>
-  <div hidden class="desc">Catch the food with your cart and avoid the rapidly approaching boulders!</div>
-</div>
+          </div>
+      </div>
+    </div>
+
 
 
 
