--- a/bct/mk3-bar-1.html
+++ b/bct/mk3-bar-1.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr" style="background-color:transparent;">
   <head>
 
-    <!--BCS Ads MK2-->
-    <title>general/entertainment/media</title>
+    <!--BCS Ads MK3-->
+    <title>general/entertainment/education</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.9/dist/css/uikit.min.css" />
     <meta charset="utf-8">
     <!-- Panelbear Analytics - We respect your privacy -->
@@ -18,7 +18,7 @@
     <div class="gallery" style="width: 45%;" height="auto">
       <div class="uk-card uk-card-default" width="100%">
           <div class="uk-card-media-top">
-              <img src="wdm.png" alt="Wave Digital Ministries Network">
+              <a href="https://kutt.it/wXTmup" target="_blank" class="uk-link-muted"><img src="wdm.png" alt="Wave Digital Ministries Network"></a>
           </div>
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>Wave Digital Ministries</span></h5>
@@ -31,7 +31,7 @@
     <div class="gallery" style="width: 45%;" height="auto">
       <div class="uk-card uk-card-default" width="100%">
           <div class="uk-card-media-top">
-              <img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog">
+              <a href="https://kutt.it/cMt0dj" target="_blank" class="uk-link-muted"><img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog"></a>
           </div>
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>CoffeeWithJake</span></h5>
