--- a/bct/mk2-bar-1.html
+++ b/bct/mk2-bar-1.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <!--BCS Ads MK2-->
+    <!--BCS Ads MK3-->
     <title>general/politics/entertainment/non-profit</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.9/dist/css/uikit.min.css" />
+
     <meta charset="utf-8">
     <!-- Panelbear Analytics - We respect your privacy -->
     <script async src="https://cdn.panelbear.com/analytics.js?site=Lb4H1jUYLUz"></script>
@@ -11,30 +13,34 @@
       panelbear('config', { site: 'Lb4H1jUYLUz' });
     </script>
   </head>
-  <body>
+  <body style="background-color:transparent;">
 
-<div class="gallery">
-  <a target="_blank" href="https://kutt.it/cMt0dj">
-    <img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog" width="30%" height="auto">
-  </a>
-  <div hidden class="desc">Let's chat about current issues over coffee.</div>
-</div>
+    <div class="gallery" style="width: 45%;" height="auto">
+      <div class="uk-card uk-card-default" width="100%">
+          <div class="uk-card-media-top">
+              <a href="https://kutt.it/wXTmup" target="_blank" class="uk-link-muted"><img src="wdm.png" alt="Wave Digital Ministries Network"></a>
+          </div>
+          <div class="uk-card-body">
+            <h5 class="uk-heading-line"><span>Wave Digital Ministries</span></h5>
+            <p>We are merging ministry & technology.</p>
+            <a href="https://kutt.it/wXTmup" target="_blank" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
-<div class="gallery">
-  <a target="_blank" href="https://kutt.it/wXTmup">
-    <img src="wdm.png" alt="Wave Digital Ministries Network" width="30%" height="auto">
-  </a>
-  <div hidden class="desc">We are merging ministry & technology.</div>
-</div>
+          </div>
+      </div>
+    </div>
+    <div class="gallery" style="width: 45%;" height="auto">
+      <div class="uk-card uk-card-default" width="100%">
+          <div class="uk-card-media-top">
+              <a href="https://kutt.it/AvTyTk" target="_blank" class="uk-link-muted"><img src="grocerycatcher1.png" alt="CoffeeWithJake Blog"></a>
+          </div>
+          <div class="uk-card-body">
+            <h5 class="uk-heading-line"><span>Grocery Catcher</span></h5>
+            <p>Catch the food with your cart and avoid the rapidly approaching boulders!</p>
+            <a href="https://kutt.it/AvTyTk" target="_blank" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
-<div class="gallery">
-  <a target="_blank" href="https://kutt.it/AvTyTk">
-    <img src="grocerycatcher1.png" alt="Grocery Catcher" width="30%" height="auto">
-  </a>
-  <div hidden class="desc">Catch the food with your cart and avoid the rapidly approaching boulders!</div>
-</div>
-
-
+          </div>
+      </div>
+    </div>
 
 <style>
 div.gallery {
