--- a/bct/mk2-bar-4.html
+++ b/bct/mk2-bar-4.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <!--BCS Ads MK2-->
+    <!--BCS Ads MK3-->
     <title>general/politics/technology</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.9/dist/css/uikit.min.css" />
+
     <meta charset="utf-8">
     <!-- Panelbear Analytics - We respect your privacy -->
     <script async src="https://cdn.panelbear.com/analytics.js?site=8g5iENhM1Lz"></script>
@@ -11,28 +13,33 @@
         panelbear('config', { site: '8g5iENhM1Lz' });
     </script>
   </head>
-  <body>
+  <body style="background-color:transparent;">
+    <div class="gallery" style="width: 45%;" height="auto">
+      <div class="uk-card uk-card-default" width="100%">
+          <div class="uk-card-media-top">
+              <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted"><img src="./img/marketingad3.png" alt="Wave Digital Ministries Network"></a>
+          </div>
+          <div class="uk-card-body">
+            <h5 class="uk-heading-line"><span>BCS Marketing</span></h5>
+            <p>Buy an ad today!</p>
+            <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
-    <div class="gallery">
-      <a target="_blank" href="https://kutt.it/wXTmup">
-        <img src="wdm.png" alt="Wave Digital Ministries Network" width="30%" height="auto">
-      </a>
-      <div hidden class="desc">We are merging ministry & technology.</div>
+          </div>
+      </div>
     </div>
+    <div class="gallery" style="width: 45%;" height="auto">
+      <div class="uk-card uk-card-default" width="100%">
+          <div class="uk-card-media-top">
+              <a href="https://kutt.it/cMt0dj" target="_blank" class="uk-link-muted"><img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog"></a>
+          </div>
+          <div class="uk-card-body">
+            <h5 class="uk-heading-line"><span>CoffeeWithJake</span></h5>
+            <p>Let's chat about current issues over coffee.</p>
+            <a href="https://kutt.it/cMt0dj" target="_blank" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
-<div class="gallery">
-  <a target="_blank" href="https://www.borgcreative.com/page12.html">
-    <img src="./img/marketingad3.png" alt="Borg Creative Studios Marketing services" width="30%" height="auto">
-  </a>
-  <div hidden class="desc">Buy an ad today!</div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="https://kutt.it/cMt0dj">
-    <img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog" width="30%" height="auto">
-  </a>
-  <div hidden class="desc">Let's chat about current issues over coffee.</div>
-</div>
+          </div>
+      </div>
+    </div>
 
 
 
