--- a/bct/mk2-bar-3.html
+++ b/bct/mk2-bar-3.html
@@ -18,7 +18,7 @@
     <div class="gallery" style="width: 45%;" height="auto">
       <div class="uk-card uk-card-default" width="100%">
           <div class="uk-card-media-top">
-              <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted"><img src="./youradhere.png" alt="Your ad here"></a>
+              <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted"><img src="https://www.borgcreative.com/bct/youradhere.png" alt="Your ad here"></a>
           </div>
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>BCS Marketing</span></h5>
