--- a/bct/mk2-bar-1.html
+++ b/bct/mk2-bar-1.html
@@ -23,7 +23,7 @@
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>Wave Digital Ministries</span></h5>
             <p>We are merging ministry & technology.</p>
-            <a href="https://kutt.it/wXTmup" target="_blank" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
+            <a href="https://kutt.it/wXTmup" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
@@ -36,7 +36,7 @@
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>Grocery Catcher</span></h5>
             <p>Catch the food with your cart and avoid the rapidly approaching boulders!</p>
-            <a href="https://kutt.it/AvTyTk" target="_blank" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
+            <a href="https://kutt.it/AvTyTk" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
