--- a/bct/mk2-bar-fruity.html
+++ b/bct/mk2-bar-fruity.html
@@ -36,7 +36,7 @@
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>CoffeeWithJake</span></h5>
             <p>Let's chat about current issues over coffee.</p>
-            <a href="https://kutt.it/cMt0dj" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="uk-link-muted">Report ad</a>
+            <a href="https://kutt.it/cMt0dj" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
@@ -49,7 +49,7 @@
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>Grocery Catcher</span></h5>
             <p>Catch the food with your cart and avoid the rapidly approaching boulders!</p>
-            <a href="https://kutt.it/AvTyTk" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="uk-link-muted">Report ad</a>
+            <a href="https://kutt.it/AvTyTk" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
