--- a/fruity.html
+++ b/fruity.html
@@ -165,8 +165,8 @@
                     </div>
 
                     <div class="modal-footer pt-0">
-                        <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://docs.google.com/document/d/1i7_xhGHgM4Nac9GvYtealhly4Dx5-E0iEdcDeg_GVkM/edit?usp=sharing" target="_blank">
-                                Read the Terms</a> <a class="btn btn-md btn-primary display-4" href="https://www.borgcreative.com/fruity/Fruity.app.zip">
+                        <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://borg-creative-studios.github.io/fruity-website/assets/files/Terms-andConditions-Fruity.pdf" target="_blank">
+                                Read the Terms</a> <a class="btn btn-md btn-primary display-4" href="https://www.borgcreative.com/fruity/Fruity.dmg">
                                 Download</a></div>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                 
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="https://docs.google.com/document/d/1i7_xhGHgM4Nac9GvYtealhly4Dx5-E0iEdcDeg_GVkM/edit?usp=sharing" target="_blank">Read the terms</a> <a class="btn btn-primary display-4" href="fruityfeatures.html">More features</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="https://borg-creative-studios.github.io/fruity-website/assets/files/Terms-andConditions-Fruity.pdf" target="_blank">Read the terms</a> <a class="btn btn-primary display-4" href="fruityfeatures.html">More features</a></div>
             </div>
         </div>
     </div>
