--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 <meta property="og:title" content="Borg Creative Studios">
 <meta property="og:description" content="Borg Creative Studios | Media/Development/Innovation">
-<meta property="og:image" content="https://www.borgcreative.com/img/bcs-logo.PNG">
+<meta property="og:image" content="https://www.borgcreative.com/img/code.jpg">
 <meta property="og:url" content="https://www.borgcreative.com/index.html">
 
 <meta property="twitter:title" content="Borg Creative Studios">
 <meta property="twitter:description" content="Borg Creative Studios | Media/Development/Innovation">
-<meta property="twitter:image" content="https://www.borgcreative.com/img/bcs-logo.PNG">
+<meta property="twitter:image" content="https://www.borgcreative.com/img/code.jpg">
 <meta property="twitter:url" content="https://www.borgcreative.com/index.html">
 
 
