--- a/dashboard.html
+++ b/dashboard.html
@@ -69,16 +69,18 @@
 
       <tbody>
           <tr>
-              <td>462</td>
+              <td>422</td>
+              <td>422</td>
               <td>2432</td>
-              <td>2942</td>
           </tr>
       </tbody>
   </table>
   <center><embed src="./chartm.html" width="100%" height="350px"></center>
-    <center><embed src="./chartt.html" width="100%" height="350px"></center>
+<center> <p><a class="uk-button uk-button-secondary" href="./chartm-2020.html" target="_blank">View 2020's data</a></p> </center>
 
-<center><p><a class="uk-button uk-button-secondary" href="https://airtable.com/shr2U9YDg30zOnthS/tblTq8exUnoJ33S1w" target="_blank">View more</a></p></center>
+    <center><embed src="./chartt.html" width="100%" height="350px"></center>
+      <center> <p><a class="uk-button uk-button-secondary" href="./chartt-2020.html" target="_blank">View 2020's data</a></p> </center>
+<center><p><a class="uk-button uk-button-secondary" href="https://airtable.com/shr2U9YDg30zOnthS/tblTq8exUnoJ33S1w" target="_blank">View site gallery</a></p></center>
 
 
   <a id = "next1"></a>
