--- a/chartm-2020.html
+++ b/chartm-2020.html
@@ -9,17 +9,22 @@
     function drawChart() {
       var data = google.visualization.arrayToDataTable([
         ['Site', 'Social Accounts','JacobBorgProgramming','GroundsTechTalk 1','GroundsTechTalk 2', 'TheRenderBlog', 'CoffeeWithJake Sites','Fruity'],
+        ['Estimated views (JAN, 2020)',       0, 336, 242, 0, 0, 0, 0],
+        ['Estimated views (FEB, 2020)',       0, 737, 187, 13, 0, 0,0],
+        ['Estimated views (MAR, 2020)',       795, 651, 112, 23, 54, 0,0],
+        ['Estimated views (APR, 2020)',       524, 786, 70, 9, 4, 0,0],
+        ['Estimated views (MAY, 2020)',       1126, 872, 94, 1, 47, 15,0],
+        ['Estimated views (JUN, 2020)',        1181, 877, 66, 4, 0, 0,0],
+        ['Estimated views (JUL, 2020)',        1305, 840, 117, 1, 4, 146,0],
+        ['Estimated views (AUG, 2020)',        1133, 1098, 73, 0, 9, 223,0],
+        ['Estimated views (SEP, 2020)',        442, 1065, 61, 0, 0, 510, 25],
         ['Estimated views (OCT, 2020)',        919, 810, 67, 0, 0, 622, 114],
         ['Estimated views (NOV, 2020)',        619, 768, 122, 0, 29, 1026, 182],
-        ['Estimated views (DEC, 2020)',        668, 622, 78, 0, 2, 663, 58],
-
-
-        ['Estimated views (JAN, 2021)',       32, 166, 17, 0, 22, 185, 1]
-
+        ['Estimated views (DEC, 2020)',        668, 622, 78, 0, 2, 663, 58]
       ]);
 
       var options = {
-        title: 'Network Views (Monthly)',
+        title: 'Network Views (Monthly) 2020',
         curveType: 'function',
         legend: { position: 'bottom' }
       };
