--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 
 
   <body>
-    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/fireworks2.png');">
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/bcs-cover.jpg');">
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-          <img src="./img/bcs-newyear.png" width="40%" alt="">
+          <img src="./img/bcs.png" width="40%" alt="">
           <h1><strong>Borg Creative Studios</strong></h1>
-          <h2><strong>Happy New Year!</strong></h2>
+          <h2><strong>The future of media.</strong></h2>
           <a class="uk-button uk-button-text" href="#next1" uk-scroll>Next</a>
         </div>
 
