--- a/dashboard.html
+++ b/dashboard.html
@@ -75,6 +75,7 @@
           </tr>
       </tbody>
   </table>
+  <center><embed src="./chartb.html" width="100%" height="350px"></center>
   <center><embed src="./chartm.html" width="100%" height="350px"></center>
 <center> <p><a class="uk-button uk-button-secondary" href="./chartm-2020.html" target="_blank">View 2020's data</a></p> </center>
 
