--- a/about.html
+++ b/about.html
@@ -55,6 +55,7 @@
 
 
   <body>
+
     <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/bcs-3.jpg');">
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
@@ -62,16 +63,51 @@
           <article class="uk-comment">
               <header class="uk-comment-header">
                   <img class="uk-comment-avatar" src="" alt="">
-                  <h4 class="uk-comment-title">Founded summer 2020</h4>
+                  <a class="uk-button uk-button-text" href="#next1" uk-scroll>Next</a>
+
                   <ul class="uk-comment-meta uk-subnav"></ul>
               </header>
-              <div class="uk-comment-body">"My brother and I decided to join forces in June of 2020 to create Borg Creative Studios. My brother (Joshua) is in charge of marketing and our film department. I (Jacob) am in charge of the software/web development and animation departments. We are dedicated to producing the best product and services possible."</div>
-              <p>-Jacob Borg, Co-Founder</p>
+
           </article>
         </div>
 
     </div>
-    <a id = "next1"></a>
+
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/privacy.jpg');">
+<a id = "next1"></a>
+        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+          <h1><strong>Privacy</strong></h1>
+          <article class="uk-comment">
+              <header class="uk-comment-header">
+                  <img class="uk-comment-avatar" src="" alt="">
+                  <h4 class="uk-comment-title">We believe that privacy is a human right. We never sell your information.</h4>
+                  <a class="uk-button uk-button-text" href="#next2" uk-scroll>Next</a>
+
+                  <ul class="uk-comment-meta uk-subnav"></ul>
+              </header>
+
+          </article>
+        </div>
+
+    </div>
+
+
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/media.jpg');">
+<a id = "next2"></a>
+        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+          <h1><strong>Media</strong></h1>
+          <article class="uk-comment">
+              <header class="uk-comment-header">
+                  <img class="uk-comment-avatar" src="" alt="">
+                  <h4 class="uk-comment-title">We make family-friendly content while mixing old and new techniques.</h4>
+                  <ul class="uk-comment-meta uk-subnav"></ul>
+              </header>
+
+          </article>
+        </div>
+
+    </div>
+
 
   </body>
 
